--- a/src/app/posts/my-posts/my-posts.component.html
+++ b/src/app/posts/my-posts/my-posts.component.html
@@ -7,7 +7,7 @@
     <mat-card *ngFor="let post of posts" style="margin-bottom: 20px;">
       <mat-card-header>
         <mat-card-title>{{ post.title }}</mat-card-title>
-        <mat-card-subtitle>Author: {{ post.username }} - {{ post.createdDate | date }}</mat-card-subtitle>
+        <mat-card-subtitle>Author: {{ post.username }} - {{ post.createdDate | date:'dd/MM/yyyy HH:mm' }}</mat-card-subtitle>
       </mat-card-header>
 
       <mat-card-content style="margin-top: 15px;">
