feat: logging screen added to admin dashboard

--- a/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -43,6 +43,17 @@
         </mat-card-content>
       </mat-card>
     </mat-grid-tile>
+    
+    <mat-grid-tile>
+    <mat-card class="admin-card" (click)="goToActionLogs()">
+      <mat-card-header>
+          <mat-card-title>Action Logs</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <p>View user activity logs like login, logout, post actions, etc.</p>
+        </mat-card-content>
+      </mat-card>
+    </mat-grid-tile>
   </mat-grid-list>
 </div>
 
